objects/ProjectTask__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <description>The description of the task</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DueDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>To tell you the due date of the task</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>One Project can have many tasks</description>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Project Tasks</relationshipLabel>
        <relationshipName>Project_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>To descript the level of the task</description>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>The information of the project task</description>
    <label>Project Task</label>
    <nameField>
        <label>Project Tasks Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>